--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @article.title %></h1>
+<% if @article.image.exists? %>
+  <%= image_tag @article.image.url %><br />
+<% end %>
 <p><%= @article.body %></p>
 <%= link_to "Edit", edit_article_path(@article) %>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Permanently delete the article?"} %>
