--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,8 +3,10 @@
   <%= image_tag @article.image.url %><br />
 <% end %>
 <p><%= @article.body %></p>
-<%= link_to "Edit", edit_article_path(@article) %>
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Permanently delete the article?"} %>
+<% if logged_in? %>
+  <%= link_to "Edit", edit_article_path(@article) %>
+  <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Permanently delete the article?"} %>
+<% end %>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
