--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -2,30 +2,12 @@
 
 <h1>Authors</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @authors.each do |author| %>
-      <tr>
-        <td><%= author.username %></td>
-        <td><%= author.email %></td>
-        <td><%= link_to 'Show', author %></td>
-        <td><%= link_to 'Edit', edit_author_path(author) %></td>
-        <td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      <tfoot>
-      </tfoot>
-    <% end %>
-  </tbody>
-</table>
-
+<% @authors.each do |author| %>
+  <p>
+    <%= author.username %>
+    <%= link_to 'Delete', author, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </p>
+<% end %>
 <br>
 
-<%= link_to 'New Author', new_author_path %>
+<%= link_to 'Create New Author', new_author_path %>
